welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:53: error: ')' expected but 'else' found.
			else {
                        ^